added location image to contact page

--- a/toylibrary/contact.html
+++ b/toylibrary/contact.html
@@ -48,8 +48,11 @@
                     <p><strong>Membership will be confirmed by email.</strong></p>
                     <p><strong>Additional information about the Toy Library and its products will be provided by email if asked</strong></p>   
                 <ul class="contact-button">                         
-                    <li><a href="mailto:cromwell_toy_library@freeemails4u.com" class="button">Join Now!</a></li>
+                    <li><a href="mailto:cromwell_toy_library@freeemails4u.com" class="button">Contact Us!</a></li>
                 </ul>
+                <p><strong>If you would rather come into the Toy Library and talk to some of our staff we are located at:</strong></p>
+                <p>4 The Mall, Cromwell, 9310</p>
+                <img src="images\loc.png" class="location_image">
             </article>
         </div>
         
